--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ button{
     display: flex;
     height: 100px;
     margin: 10px;
+    font-size: 30px;
     background-color: rgb(247,247,247);
     align-items: center;
     justify-content: center;
@@ -51,5 +52,7 @@ button{
 button{
     background-color: rgb(139,157,195);
     padding: 15px 20px;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
     border: solid rgb(139,157,195);
 }
